spacing fixes

--- a/src/pages/Courses_W2/styles.css
+++ b/src/pages/Courses_W2/styles.css
@@ -123,7 +123,7 @@ html {
 }
 
 .progressbar img{
-   width: 80%;
+   width: 70%;
    height: auto;
 }
 
